[MIG] web_responsive: Migrate to v10 * Bump version * Change all openerp to odoo * Fix qunit suite injection * Remove jQuery require * Change to new selectors:   * `oe_leftbar` to `o_sub_menu`   * `oe_logo` to `o_sub_menu_logo`   * `oe_footer` to `o_sub_menu_footer`   * `oe_secondary_menus_container` to `o_sub_menu_content` * Add style to hide oe_footer instead of remove to not break `support_branding` * Add note in ReadMe explaining override of `support_branding` * Set top margin of app drawer title to 0 to fit v10 proportions * Fix notification badge positioning * Add o_web_client class to body to fix overlaps * Scroll control panel with page * Change navbar z-index to not be overlapped by buttons * Raise z-index on header to raise over buttons * Handle layered notifications via z-index * Remove `#` from navigation links HREF to prevent history littering

--- a/web_responsive/static/src/less/app_drawer.less
+++ b/web_responsive/static/src/less/app_drawer.less
@@ -11,7 +11,32 @@
     border-radius: @border-radius-base;
     .box-shadow(0 6px 12px rgba(0, 0, 0, .175));
     background-clip: padding-box;
-
+    z-index: 2000;
+    
+    .o_tooltip {
+        z-index: 2051;
+    }
+    
+    .oe_logo {
+        img {
+            margin-top: -@app-drawer-navbar-padding-vertical * 2;
+            height: @app-drawer-title-height;
+        }
+        .oe_logo_edit {
+            position: absolute;
+            top: 1px;
+            width: 100%;
+            padding: 4px;
+            margin: 14px 0;
+            display: none;
+            color: #eee;
+            background: rgba(37,37,37,0.9);
+        }
+        &:hover .oe_logo_edit_admin {
+            display: block;
+        }
+    }
+    
     .navbar-left {
         width: 100%;
 
@@ -25,7 +50,7 @@
     }
 
     .app-drawer-panel-title {
-        margin-top: 4px;
+        margin-top: 5px;
     }
 
     .app-drawer-icon-app {
@@ -45,14 +70,12 @@
         position: absolute;
         height: @app-drawer-title-height;
         width: 100%;
-        z-index: 9999;
     }
 
 }
 
 .drawer-nav {
     width: @app-drawer-width;
-    z-index: 9999;
 }
 
 .drawer--left .drawer-nav {
